update objects in database [delivers #184438529]
